--- a/ESD2-firmware/platformio.ini
+++ b/ESD2-firmware/platformio.ini
@@ -14,4 +14,6 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps =
     https://github.com/jkb-git/ESP32Servo
+    https://github.com/adafruit/Adafruit_ICM20X
+monitor_speed = 115200
 
