--- a/ESD2-firmware/platformio.ini
+++ b/ESD2-firmware/platformio.ini
@@ -16,5 +16,12 @@ lib_deps =
     https://github.com/jkb-git/ESP32Servo
     https://github.com/adafruit/Adafruit_ICM20X
     https://github.com/madhephaestus/ESP32Encoder
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
 monitor_speed = 115200
 
+
+
+; Choose one:
+board_build.filesystem = littlefs
+; board_build.filesystem = spiffs
