--- a/ESD2-firmware/platformio.ini
+++ b/ESD2-firmware/platformio.ini
@@ -10,18 +10,13 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
 lib_deps =
     https://github.com/jkb-git/ESP32Servo
     https://github.com/adafruit/Adafruit_ICM20X
     https://github.com/madhephaestus/ESP32Encoder
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/me-no-dev/AsyncTCP.git
+    Links2004/WebSockets
+    https://github.com/tzapu/WiFiManager.git#PEAP
 monitor_speed = 115200
 
-
-
-; Choose one:
-board_build.filesystem = littlefs
-; board_build.filesystem = spiffs
